[tool.poetry]
name = "data-parser"
version = "0.1.0"
description = "Can be utilised to convert raw data from multiple source to structured reusable entity"
authors = ["Ashish Nayan <nayanashish@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{include = "data_parser"}]
repository = "https://github.com/ashishnayan/data_parser"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
ipython = "^8.12.0"
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.11.4"
pre-commit = "^2.21.0"
seed-isort-config = "^2.2.0"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
